--- a/test/test.scss
+++ b/test/test.scss
@@ -1,12 +1,8 @@
-.test{
-  background: url('tmp/1px.png',$base64: true) no-repeat;
-  background: url('tmp/1px.png', $timestamp: 'p0') no-repeat;
-  background: url('tmp/1px.png') no-repeat;
-  background: url('http://tmp/1px.png') no-repeat;
-  width:1px;
-  height:200px;
-  padding: 100px;
-}
+@import "mixins/_clearfix.scss";
+@import "mixins/_placeholder-wrapper.scss";
+//@import "main.scss";
+
+
 
 body[data-dpr="1"] {
   font-size:10px;
@@ -14,6 +10,18 @@ body[data-dpr="1"] {
 body[data-dpr="2"] {
 font-size:20px;
 }
-.a{
+.test-a{
   height: 200px;
+}
+
+.test-b{
+  background: url('tmp/1px.png',$base64: true) no-repeat;
+  background: url('tmp/1px.png', $timestamp: 'p0') no-repeat;
+  background: url('tmp/1px.png') no-repeat;
+  background: url('http://tmp/1px.png') no-repeat;
+  background: inline_image('tmp/1px.png') no-repeat;
+  width:1px;
+  height:200px;
+  padding: 100px;
+  @include clearfix;
 }
