--- a/test/test.scss
+++ b/test/test.scss
@@ -11,23 +11,29 @@ body[data-dpr="1"] {
   font-size:10px;
 }
 body[data-dpr="2"] {
-font-size:20px;
+  font-size:20px;
 }
-.test-a{
+.test-a {
   height: 200px;
+  width: 200px;//!px2rem-ignore
+  width:200px;
+  /*!ignore*/width: 200px;
 }
 
-.test-b{
+.test-b {
+//  background: url('tmp/demo.jpg') no-repeat;
   background: url('tmp/1px.png',$base64: true) no-repeat;
-  background: url('tmp/1px.png', $timestamp: 'p0') no-repeat;
+  background: url('tmp/1px.png', $timestamp: 'xxx') no-repeat;
+  background: url('tmp/1px.png?xxx') no-repeat;
   background: url('tmp/1px.png') no-repeat;
   background: url('http://tmp/1px.png') no-repeat;
   background: inline_image('tmp/1px.png') no-repeat;
+
   width:1px;
   height:200px;
   padding: 100px;
   @include clearfix;
 }
-.test-c{
+.test-c {
   @include box-sizing;
 }
