add multiple ellipsis and triangle

--- a/stylesheets/sassmagic/helpers/_mixins.scss
+++ b/stylesheets/sassmagic/helpers/_mixins.scss
@@ -1,4 +1,5 @@
 @import "mixins/backgroundTransparent";
 @import "mixins/ellipsis-overflow";
 @import "mixins/float";
+@import "mixins/triangle";
 @import "mixins/px2rem";
